# halfwit

./: Cargo.toml  README.md  bacon.toml  branch.md
src/: bisection.rs  lib.rs  main.rs
