[package]
name = "halfwit"
description = "A general-purpose file bisector"
version = "0.0.1"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
fncmd = "2.1.0"
glob = "0.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.8.0", features = ["v4"] }
